Some basics of a wacky plugin system.
Check out the testPlugin source code.