@@ -1,3 +1,4 @@
 @echo off
-java -jar 64px-srvr.jar
+rem java -cp "lib/*" 64px-srvr.server.Main
+java -Djava.ext.dirs=lib -jar 64px-srvr.jar
 pause
